feat: refraction correction flag #61 (partial)
chore: various cleanups and minor refactorings